@@ -1,5 +1,6 @@
 version 2.03.20 - 
 ====================================
+  Fix segfault if using -S|--select with log/report_command_log=1 setting.
   Configure now fails when requested lvmlockd dependencies are missing.
   Add some configure Gentoo enhancements for static builds.
 
